yearly-activity-report/src/css/style.css
* {
    margin: 0;
    padding: 0;
}

.App {
    display: flex;
    height: 100vh;
    gap: 30px;
}

.nav-bar {
    width: 258px;
    background-color: #FFFFFF;
    box-shadow: 20px 0 20px rgba(93, 0, 93, 0.15);
    position: relative;
    z-index: 100;
}

.nav-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.logo {
    margin-top: 38px;
    margin-left: 29px;
    display: block;
}

.logo-container {
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
}

.second-logo {
    width: 254px;
    height: auto;
    max-height: 234px;
}

.nav-bar ul {
    padding-top: 50px;
}

.nav-bar ul li {
    flex: 1 0 0;
    position: relative;
    padding: 25px 0 25px 25px;
    color: #4d4d4d;
    font-family: "Plus Jakarta Sans";
    font-size: 18px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    display: flex;
    align-items: center;
    transition: color 0.2s ease;
}

.nav-bar ul li:hover {
    color: rebeccapurple;
    cursor: pointer;
}

.nav-icon {
    width: 20px;
    height: 20px;
    margin-right: 16px;
    flex-shrink: 0;
    stroke: #5b5b5b;
    transition: stroke 0.2s ease;
}

.nav-bar ul li:hover .nav-icon {
    stroke: rebeccapurple;
}

hr {
    width: 200px;
    height: 0px;
    flex-shrink: 0;
    stroke-width: 1px;
    stroke: #C4C4C4;
    margin-left: 25px;
    margin-top: 25px;
    margin-bottom: 25px;
}

.visual-container {
    display: grid;
    gap: 30px;
    width: 100%;
    padding-right: 30px;
    padding-top: 30px;
    padding-bottom: 30px;
    overflow-y: auto;
    flex-grow: 1;
    grid-template-columns: 2fr 1fr;
    max-height: 100vh;
}

.visual-generator {
    display: flex;
    flex-direction: column;
    gap: 20px;
    height: 400px;
    width: auto;
    grid-column: span 2;
    border-radius: 10px;
    border: 1px solid #f3f3f3;
    background-color: #FFFFFF;
    box-shadow: 20px 20px 20px rgba(93, 0, 93, 0.15);
    padding: 20px;
}

.visual-generator h2 {
    color: #333333;
    font-family: "Montserrat";
    font-weight: 500;
}

.visualization-dropdown {
    width: auto;
    max-width: 300px;
    height: 60px;
    background-color: #FFFFFF;
    border: 1px solid #f3f3f3;
    border-radius: 10px;
    box-shadow: 0px 4px 10px rgba(93, 0, 93, 0.1);
    font-family: "Montserrat";
    font-size: 20px;
    padding-left: 10px;
    color: #4d4d4d;
    position: relative;
}

.visualization-dropdown::after {
    content: '▼';
    padding-left: 20px;
    font-size: 18px;
    position: absolute;
    right: 15px;
    top: 50%;
    transform: translateY(-50%);
    color: #8c8c8c;
    pointer-events: none;
}

.visualization-dropdown::-ms-expand {
    display: none;
}

.visualization-prompt {
    width: auto;
    padding: 15px;
    font-size: 16px;
    color: #4d4d4d;
    border: 1px solid #f3f3f3;
    border-radius: 10px;
    box-shadow: 0px 4px 10px rgba(93, 0, 93, 0.1);
    background-color: #FFFFFF;
    transition: border-color 0.3s ease, box-shadow 0.3s ease;
    height: 190px;
}

.visualization-prompt:focus {
    border-color: rebeccapurple;
    box-shadow: 0px 0px 5px rgba(93, 0, 93, 0.2);
    outline: none;
}

.visual-buttons-container {
    display: flex;
    gap: 20px;
}

@keyframes glow {
    0% {
        box-shadow: 0 0 5px rgba(50, 0, 110, 0.5), 0 0 10px rgba(50, 0, 110, 0.4);
    }
    50% {
        box-shadow: 0 0 8px rgba(50, 0, 110, 0.7), 0 0 15px rgba(50, 0, 110, 0.5);
    }
    100% {
        box-shadow: 0 0 5px rgba(50, 0, 110, 0.5), 0 0 10px rgba(50, 0, 110, 0.4);
    }
}

.cancelButton {
    font-weight: 700;
    font-size: 14px;
    padding: 10px;
    border-radius: 10px;
    border: 2px solid #4B2E83;
    font-family: "Encode Sans";
    color: #495057;
    background-color: #FFFFFF;
    width: 100px;
    cursor: pointer;
    transition: all 0.3s ease;
}

.generateButton {
    font-weight: 700;
    font-size: 14px;
    cursor: pointer;
    padding: 10px;
    border-radius: 10px;
    border: 2px solid #e5e5e5;
    width: 100px;
    font-family: "Montserrat";
    background-color: #32006E;
    color: #FFFFFF;
    transition: all 0.3s ease;
}

.cancelButton:hover,
.generateButton:hover {
    animation: glow 2s infinite alternate;
}

.cancelButton:focus,
.generateButton:focus {
    outline: none;
    animation: glow 2s infinite alternate;
}

.username {
    width: 100%;
    grid-column: span 2;
    background-color: #FFFFFF;
    font-family: "Encode Sans";
    color: #4B2E83;
}

.visual-section {
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    height: auto;
    min-height: 400px;
    width: 100%;
    background-color: #FFFFFF;
    border: 1px solid #f3f3f3;
    box-shadow: 20px 20px 20px rgba(93, 0, 93, 0.15);
    overflow: hidden;
    padding-bottom: 20px;
}

.publication-distribution {
    flex-direction: column;
    display: flex;
    height: auto;
    min-height: 400px;
    width: 100%;
    border-radius: 10px;
    border: 1px solid #f1efef;
    background-color: #FFFFFF;
    box-shadow: 20px 20px 20px rgba(93, 0, 93, 0.15);
    overflow: hidden;
    padding-bottom: 20px;
}

.visual-section h2, .publication-distribution h2 {
    margin-top: 30px;
    text-align: center;
    color: #495057;
    font-family: "Montserrat";
    font-weight: 700;
}

.image-container {
    width: 100%;
    padding: 0 20px;
    box-sizing: border-box;
    margin-top: 10px;
    flex-grow: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

.visual-section img,
.publication-distribution img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    display: block;
}

